; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_insert_select_planner.c_InsertSelectIntoLocalTable.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_insert_select_planner.c_InsertSelectIntoLocalTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InsertSelectIntoLocalTable(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @CheckInsertSelectQuery(i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call %struct.TYPE_3__* @ExtractResultRelationRTE(i32* %11)
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %5, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @IsDistributedTable(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %21

19:                                               ; preds = %10
  br label %20

20:                                               ; preds = %19, %1
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %18
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @CheckInsertSelectQuery(i32*) #1

declare dso_local %struct.TYPE_3__* @ExtractResultRelationRTE(i32*) #1

declare dso_local i32 @IsDistributedTable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
